version 1.2.0
- add "rename" command (rename a variable)
- "delete" command: add the ability to delete a specific
  variable, identified by its number
- When adding a variable to the dataset from a model window,
  give the user a chance to edit the name and description
- Windows: add option to emulate Windows look (via WIMP)
- add "--no-restore-data" to R invocation
- Fix for launching R from gretl on Windows XP
- Improve creation of time-series datasets for use in R
- Fix problems created by tabs in the command line
- Two-stage least squares: add list of instruments to printout
  of model results
- Improve the mechanism for detecting the presence of a lagged
  dependent variable in a regression list; also show the
  Durbin-Watson stat in addition to Durbin's h when a 
  regression includes a lagged dependent variable
- Fix bug in graph editing for non-English locales
- genr command: add facility for using date strings in boolean
  comparisons, e.g. "genr dummy = t > 1973:4" will work for 
  quarterly data
- VARs: add facility to separate deterministic terms such as 
  trend and dummies from the other variables in the regression 
  list; add Durbin-Watson statistic to model printouts; add 
  printing of impulse responses and variance decompositions
- Improvements to data-editing spreadsheet in gtk-2.0 version
- New, improved dialogs for setting the sample range and sub-
  sampling using a dummy variable
- Add color selection to the graph editing dialog (only applies
  if gnuplot has the "new" PNG driver, i.e. gnuplot 3.8)
- minor fixes to the build process
- updates to gtk-1.2 GUI (make more consistent with the gtk-2.0 
  version)
- Allow for renaming of saved session models and graphs in gtk2
  version of program

10/31/2003 version 1.1.6
- Test release for Fedora (Linux) packaging

10/24/2003 version 1.1.5
- Updates to manual
- Gtk2 version: Make selection dialog tall enough for wls,
  tsls and ar model selections