@@ -91,7 +91,8 @@ char *gretl_commands[] = {
     "pergm",
     "plot",    
     "pooled",
-    "print",  
+    "print", 
+    "printf",
     "probit",
     "pvalue",  
     "quit", 
